--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,7 +8,8 @@
 
     section#login {
         width: 80vw;
-        height: 400px; /* Ajuste a altura para caber o conteúdo horizontal */
+        height: 290px; /* Ajuste a altura para caber o conteúdo horizontal */
+
     }
 
     section#login > div#imagem {
@@ -31,7 +32,7 @@
     
     section#login {
         width: 950px;
-        height: 400px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -50,6 +51,7 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
